Fixed header z-index.

--- a/style.css
+++ b/style.css
@@ -884,7 +884,7 @@ header.main-header {
 	position: fixed;
 	top: 0;
 	width: 100%;
-	z-index: 10000;
+	z-index: 10001;
 }
 
 body.admin-bar header.main-header {
